# Project-Image-processing-in-C

./: CMakeLists.txt  README.md
Img/: bmp24.c  bmp24.h  bmp8.c  bmp8.h  desktop.ini  main.c  main_color.c  main_menu.c
